# example_flask_restx

./: README.md  pyproject.toml
app/: app copy.py  app.py
tests/: app_test.py
