[tool.poetry]
name = "example-flask-restx"
version = "0.1.0"
description = ""
authors = ["Rhinoj0sa <rhinojosaram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-restx = "^1.1.0"
flask = "^2.3.0"
pytest = "^7.4.3"
icecream = "^2.1.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
